--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1100,17 +1100,6 @@ select {
 .prose > :last-child {
 	margin-bottom: 0;
 }
-.sr-only {
-	position: absolute;
-	width: 1px;
-	height: 1px;
-	padding: 0;
-	margin: -1px;
-	overflow: hidden;
-	clip: rect(0, 0, 0, 0);
-	white-space: nowrap;
-	border-width: 0;
-}
 .pointer-events-none {
 	pointer-events: none;
 }
@@ -1140,6 +1129,15 @@ select {
 }
 .top-0 {
 	top: 0px;
+}
+.-left-1\.5 {
+	left: -0.375rem;
+}
+.-left-1 {
+	left: -0.25rem;
+}
+.-left-2 {
+	left: -0.5rem;
 }
 .z-0 {
 	z-index: 0;
@@ -1287,17 +1285,20 @@ select {
 .mr-4 {
 	margin-right: 1rem;
 }
-.mt-auto {
-	margin-top: auto;
-}
-.mb-8 {
-	margin-bottom: 2rem;
-}
 .mb-3 {
 	margin-bottom: 0.75rem;
 }
 .-mt-10 {
 	margin-top: -2.5rem;
+}
+.mt-0\.5 {
+	margin-top: 0.125rem;
+}
+.mt-0 {
+	margin-top: 0px;
+}
+.ml-auto {
+	margin-left: auto;
 }
 .mb-2 {
 	margin-bottom: 0.5rem;
@@ -1308,8 +1309,11 @@ select {
 .mr-auto {
 	margin-right: auto;
 }
-.ml-auto {
-	margin-left: auto;
+.mt-auto {
+	margin-top: auto;
+}
+.mb-8 {
+	margin-bottom: 2rem;
 }
 .block {
 	display: block;
@@ -1359,9 +1363,6 @@ select {
 .h-20 {
 	height: 5rem;
 }
-.h-48 {
-	height: 12rem;
-}
 .h-64 {
 	height: 16rem;
 }
@@ -1373,6 +1374,12 @@ select {
 }
 .h-2 {
 	height: 0.5rem;
+}
+.h-1 {
+	height: 0.25rem;
+}
+.h-48 {
+	height: 12rem;
 }
 .h-80 {
 	height: 20rem;
@@ -1425,9 +1432,6 @@ select {
 .w-96 {
 	width: 24rem;
 }
-.w-56 {
-	width: 14rem;
-}
 .w-9 {
 	width: 2.25rem;
 }
@@ -1439,6 +1443,9 @@ select {
 }
 .w-1\/2 {
 	width: 50%;
+}
+.w-56 {
+	width: 14rem;
 }
 .min-w-0 {
 	min-width: 0px;
@@ -1579,14 +1586,14 @@ select {
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+.grid-cols-4 {
+	grid-template-columns: repeat(4, minmax(0, 1fr));
+}
 .grid-cols-5 {
 	grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 .grid-cols-2 {
 	grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-.grid-cols-4 {
-	grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 .grid-rows-1 {
 	grid-template-rows: repeat(1, minmax(0, 1fr));
@@ -1831,9 +1838,25 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
 }
+.bg-blue-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(96, 165, 250, var(--tw-bg-opacity));
+}
+.bg-gray-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
 .bg-green-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
+}
+.bg-blue-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(37, 99, 235, var(--tw-bg-opacity));
+}
+.bg-purple-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(167, 139, 250, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
@@ -1874,11 +1897,11 @@ select {
 .p-4 {
 	padding: 1rem;
 }
-.p-3 {
-	padding: 0.75rem;
-}
 .p-5 {
 	padding: 1.25rem;
+}
+.p-3 {
+	padding: 0.75rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -1940,6 +1963,10 @@ select {
 	padding-left: 1.25rem;
 	padding-right: 1.25rem;
 }
+.px-12 {
+	padding-left: 3rem;
+	padding-right: 3rem;
+}
 .px-16 {
 	padding-left: 4rem;
 	padding-right: 4rem;
@@ -1980,9 +2007,6 @@ select {
 .pr-10 {
 	padding-right: 2.5rem;
 }
-.pb-2 {
-	padding-bottom: 0.5rem;
-}
 .pb-6 {
 	padding-bottom: 1.5rem;
 }
@@ -1991,6 +2015,9 @@ select {
 }
 .pb-5 {
 	padding-bottom: 1.25rem;
+}
+.pb-2 {
+	padding-bottom: 0.5rem;
 }
 .text-left {
 	text-align: left;
@@ -2149,10 +2176,6 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
-.text-yellow-400 {
-	--tw-text-opacity: 1;
-	color: rgba(251, 191, 36, var(--tw-text-opacity));
-}
 .text-blue-600 {
 	--tw-text-opacity: 1;
 	color: rgba(37, 99, 235, var(--tw-text-opacity));
@@ -2161,13 +2184,17 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(254, 226, 226, var(--tw-text-opacity));
 }
-.text-purple-600 {
+.text-yellow-400 {
 	--tw-text-opacity: 1;
-	color: rgba(124, 58, 237, var(--tw-text-opacity));
+	color: rgba(251, 191, 36, var(--tw-text-opacity));
 }
 .text-blue-500 {
 	--tw-text-opacity: 1;
 	color: rgba(59, 130, 246, var(--tw-text-opacity));
+}
+.text-purple-600 {
+	--tw-text-opacity: 1;
+	color: rgba(124, 58, 237, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -2362,14 +2389,6 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(139, 92, 246, var(--tw-text-opacity));
 }
-.hover\:text-purple-400:hover {
-	--tw-text-opacity: 1;
-	color: rgba(167, 139, 250, var(--tw-text-opacity));
-}
-.hover\:text-indigo-500:hover {
-	--tw-text-opacity: 1;
-	color: rgba(99, 102, 241, var(--tw-text-opacity));
-}
 .hover\:text-gray-100:hover {
 	--tw-text-opacity: 1;
 	color: rgba(243, 244, 246, var(--tw-text-opacity));
@@ -2381,6 +2400,14 @@ select {
 .hover\:text-blue-400:hover {
 	--tw-text-opacity: 1;
 	color: rgba(96, 165, 250, var(--tw-text-opacity));
+}
+.hover\:text-indigo-500:hover {
+	--tw-text-opacity: 1;
+	color: rgba(99, 102, 241, var(--tw-text-opacity));
+}
+.hover\:text-purple-400:hover {
+	--tw-text-opacity: 1;
+	color: rgba(167, 139, 250, var(--tw-text-opacity));
 }
 .hover\:underline:hover {
 	text-decoration: underline;
@@ -2819,16 +2846,16 @@ select {
 		margin-bottom: 0px;
 	}
 
+	.lg\:grid-cols-2 {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
 	.lg\:grid-cols-5 {
 		grid-template-columns: repeat(5, minmax(0, 1fr));
 	}
 
 	.lg\:grid-cols-4 {
 		grid-template-columns: repeat(4, minmax(0, 1fr));
-	}
-
-	.lg\:grid-cols-2 {
-		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 
 	.lg\:px-8 {
